[tool.poetry]
name = "leetcode-bot"
version = "0.1.0"
description = "Telegram Bot for Nerd_Students chat"
authors = ["ilya <iborovkov97@yandex.ru>"]
readme = "README.md"
packages = [{include = "leetcode_bot"}]

[tool.poetry.dependencies]
python = "3.11"
python-telegram-bot = "^20.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
